public/stylesheets/main.css
body {
  /* padding: 400px; */
  font: 14px "Varela Round", Helvetica, Arial, sans-serif;
  color: white;
  background-color: rgb(37, 33, 43);
  background-image: url("/images/oraql-login-background.png");
  background-size: auto;
  background-repeat: repeat;
  position: relative;
  min-height: 100vh;
}

a {
  color: #e08ff0;
}

* {
  box-sizing: border-box;
}

h1,
h2,
h3,
h4,
h5,
h6,
a,
ol,
li,
ul,
div,
span,
body,
header,
nav {
  font-size: 1rem;
  /* color: inherit; */
  /* background-color: transparent; */
  margin: 0;
  padding: 0;
  outline: 0;
  font-weight: normal;
}

.navSpacer {
  height: 50px;
}

h1 {
  font-size: 2rem;
}

.bigOraqlLogo {
  /* height: 50px; */
  width: 110px;
  margin: 20px;
  margin-top: 30px;
}

.form-div {
  background-color: rgb(73, 62, 84);
  width: 450px;
  /* margin-left: auto;
margin-right: auto;
margin-top: 50px; */
  margin: 50px auto 0;
  border-radius: 10px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid rgb(25, 20, 28);
  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
  filter: drop-shadow(0 0 2px rgba(255, 255, 255, .2))
}

.form-div-wide {
  background-color: rgb(73, 62, 84);
  width: 700px;
  /* margin-left: auto;
margin-right: auto;
margin-top: 50px; */
  margin: 50px auto 0;
  border-radius: 10px;
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
  border: 1px solid rgb(25, 20, 28);
  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
  filter: drop-shadow(0 0 2px rgba(255, 255, 255, .2))
}

label {
  display: block;
  margin-top: 20px;
  margin-bottom: 5px;
}

input {
  font: 20px "Varela Round", Helvetica, Arial, sans-serif;
  width: 100%;
  border-radius: 5px;
  border: none;
  padding: 4px;
}

textarea {
  font: 20px "Varela Round", Helvetica, Arial, sans-serif;
  border-radius: 5px;
  border: none;
  padding: 4px;
  resize: none;
}

.ansEditTextArea {
  font-size: 12pt;
}

.editLabel {
  margin-top: -10px;
}

select {
  font: 20px "Varela Round", Helvetica, Arial, sans-serif;
  width: 50%;
  border-radius: 5px;
  border: none;
  padding: 2px;
}

.formButton {
  font: 14px "Varela Round", Helvetica, Arial, sans-serif;
  background-color: rgb(255, 219, 128);
  color: rgb(37, 33, 43);
  padding: 5px;
  margin: 20px;
  margin-left: 230px;
  border-radius: 50px;
  border: none;
  padding-left: 15px;
  padding-right: 15px;
  font-size: 14pt;
  transition: 0.3s;
}

.accountAnchor {
  font: 14px "Varela Round", Helvetica, Arial, sans-serif;
  text-align: center;
  /* margin-bottom: 25px; */
  transition: 0.3s;
  /* margin-left: none; */
}

.accountAnchortext {
  text-decoration: none;
  font-weight: 550;
  white-space: nowrap;
  /* margin-left: none; */
}

#login {
  margin-right: 0px;
  /* border-right: white 2px solid; */
  padding-right: 3px;
}

#navLine {
  border: white 1px solid;
  height: 24px;
}

#signup {
  margin-left: 0px;
  padding-left: 3px;
}

#signup a, #login a, #navUser {
  color: #e08ff0;
}

#navUser {
  font-size: 14pt;
  margin-left: 10px;
  margin-right: 16px;
}

#logOut {
  background-color: white;
  color: rgb(25, 20, 28);
  border-radius: 50px;
  padding-left: 15px;
  padding-right: 15px;
  border: none;
  cursor: pointer;
}

#demoUser {
  background-color: white;
  color: rgb(25, 20, 28);
  border-radius: 50px;
  padding-left: 15px;
  padding-right: 15px;
}

.navButton {
  font: 14px "Varela Round", Helvetica, Arial, sans-serif;
  color: white;
  padding: 5px;
  /* padding-left: 15px;
  padding-right: 15px; */
  font-size: 14pt;
  transition: 0.3s;
}

.formTitle {
  font-size: 20pt;
}

.askbtn {
  margin: 0;
  white-space: nowrap;
  background-color: rgb(255, 219, 128);
  text-decoration: none;
}

.cancelButton {
  white-space: nowrap;
  background-color: white;
  text-decoration: none;
}

.formError {
  color: rgb(255, 170, 113);
  margin-top: 16px;
}

.errorList {
  list-style: none;
  text-align: center;
  margin: 4px;
}

.divider {
  margin-top: 10px;
  width: 78%;
  border: solid 1px rgb(51, 37, 58);
}

.smallOraqlLogo {
  width: 80px;
}

.navBar {
  position: fixed;
  top: 0px;
  width: 100%;
  background-color: rgb(73, 62, 84);
  padding-top: 10px;
  padding-bottom: 10px;
  border-bottom: 1px solid rgb(25, 20, 28);
  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
  filter: drop-shadow(0 0 2px rgba(255, 255, 255, .2));
  z-index: 1;
}

.footerBar {
  position: absolute;
  bottom: 0px;
  width: 100%;
  height: fit-content;
  background-color: rgb(25, 20, 28);
  padding-top: 10px;
  padding-bottom: 10px;
  border-top: 1px solid rgb(25, 20, 28);
  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.3);
  filter: drop-shadow(0 0 2px rgba(255, 255, 255, .2));
  z-index: 1;
}

.footerContent {
  display: flex;
   justify-content: center;
   align-items: center;
   gap: 50px;
}

.footerSpacer {
  height: 110px;
}

.footerIcons {
  display: flex;
  gap: 10px;
  align-items: center;
  justify-content: center;
}

.developerList {
  display: flex;
  gap: 10px;
  justify-content: center;
  align-items: center;
}

.devDiv {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.devLinks {
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-items: center;
}


#expressIcon {
  filter: invert();
  margin-top: 6px;
}

.navbarContent {
  width: 70%;
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin-left: auto;
  margin-right: auto;
}

.navIcon {
  width: 35px;
  transition: .3s;
}

/* .signandlogin > a {
  padding: 10px;
} */

.signandlogin {
  display: flex;
  align-items: center;
}

.navObject {
  margin-left: 10px;
  margin-right: 10px;
  transition: 0.3s;
  /* padding-left: 2%;
  padding-right: 2%; */
}


#less {
  font-size: 8pt;
}

.pText {
  margin-top: 50px;
  font-size: 1.5em;
  color: white;
  text-align: center;
}

.mainContentDiv {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  margin-top: 60px;
}
/* ... */

